# login-server-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
proto/: login.proto
scripts/: bench_grpc.sh  bench_http.sh  schema.sql
src/: config.rs  grpc.rs  http.rs  main.rs  models.rs  rate_limit.rs  state.rs
