[package]
name = "login-server-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
authors = ["Jobson Marinho <jobsonmarinho@users.noreply.github.com>"]
description = "High-throughput login-server in Rust (HTTP + gRPC), with simple per-IP rate limiting."
repository = "https://github.com/JobsonMarinho/login-server-rs"
readme = "README.md"
keywords = ["rust", "login", "grpc", "http", "axum"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "http1", "http2", "json"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
anyhow = "1"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
prost = "0.12"
tonic = { version = "0.11", features = ["transport"] }
prost-types = "0.12"

sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls"] }
redis = { version = "0.25", features = ["tokio-comp"] }
futures-util = { version = "0.3" }

[build-dependencies]
tonic-build = "0.11"
